Finish initial setup for image

--- a/normalize.css
+++ b/normalize.css
@@ -349,3 +349,21 @@ template {
 [hidden] {
   display: none;
 }
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
